CFY-1539 - Deployment events overlaps Workflow parameters screen - fixed

--- a/app/styles/_dialogs.scss
+++ b/app/styles/_dialogs.scss
@@ -347,6 +347,7 @@
     margin: auto;
     margin-top: 100px;
     line-height: 40px;
+    z-index: 10001;
 
     .dialogDescription {
         font-size: 20px;
